--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,3 +1,16 @@
+
+
+
+<% if @article.errors.any? %>
+      <ul>
+      <% @article.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+<% end %>
+
+
+
 <%= f.label :topic, "Topic" %>
 <%= f.text_field :topic %>
 
