--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -10,9 +10,16 @@
 <% end %>
 
 
+<div class="form_group">
+  <%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) %>
+</div>
 
-<%= f.label :topic, "Topic" %>
-<%= f.text_field :topic %>
+<div class="form_group">
+  <%= f.label :topic, "Topic" %>
+  <%= f.text_field :topic, :class => "form-control" %>
+</div>
 
-<%= f.label :content, "Content" %>
-<%= f.text_area :content %>
+<div class="form_group">
+  <%= f.label :content, "Content" %>
+  <%= f.text_area :content, :class => "form-control" %>
+</div>
