--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,8 @@
 <%= form_for @article, :url => article_path(@article) do |f| %>
+
    <%= render :partial => 'form', :locals => { :f => f } %>
 
-    <%= f.submit "Update" %>
+    <%= f.submit "Update",:class => "btn btn-primary" %>
 <% end %>
+
+<p><%= link_to 'Cancel', articles_path, :class => "btn btn-default" %></p>
