--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,12 @@
   <div class="row">
     <div class="col-md-12">
       <% if flash[:notice].present? %>
-        <p style="color: green"><%= flash[:notice] %></p>
-      <% end %>
+        <div class="alert alert-success" role="alert"><%= flash[:notice] %></div>
+      <%end%>
+
       <% if flash[:alert].present? %>
-        <p style="color: red"><%= flash[:alert] %></p>
-      <% end %>
+        <div class="alert alert-danger" role="alert"><%= flash[:alert] %></div>
+      <%end%>
 
 
     <ul class="nav nav-pills">
