add gem omniauth-facebook

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
     <% else %>
         <li><%= link_to('註冊', new_registration_path(:user)) %></li>
         <li><%= link_to('登入', new_session_path(:user)) %></li>
+        <li><%= link_to "登入 Facebook", user_omniauth_authorize_path(:facebook) %></li>
     <% end %>
         <% if current_user %>
         <li><%= link_to "Hi! #{current_user.display_name}" %></li>
