--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -33,7 +33,7 @@
 
 <%= yield %>
 
-      <%= link_to "admin", admin_articles_path %>
+      <%= link_to "回凡間", articles_path %>
     </div>
   </div>
 </div>
