--- a/app/views/articles/_list.html.erb
+++ b/app/views/articles/_list.html.erb
@@ -4,25 +4,24 @@
     <th>文章標題</th>
     <th>發佈者</th>
     <th>回覆數</th>
-      <% if current_user.present? && current_user %>
+      <% if current_user %>
     <th>操作</th>
     <% else %>
     <th></th>
       <% end %>
   </tr>
-
   <% @articles.each do |a| %>
   <tr>
     <td>
-        <%= link_to "#{a.topic}", article_path(a), :class => "btn btn-default btn-block" %>
+        <%= link_to a.topic, article_path(a), :class => "btn btn-default btn-block" %>
     </td>
     <td>
-      by: <%= a.user.display_name %>
+      by: <%= link_to a.user.display_name, profile_path( a.user ) %>
     </td>
     <td><%= a.comments.size %></td>
     
     <td>
-      <% if current_user.present? && current_user.id == a.user_id %>
+      <% if a.can_edit_by?(current_user) %>
     
         <div class="btn-group">
           <button type="button" class="btn btn-default"><%= link_to "內容與其他", article_path(a) %></button>
@@ -44,3 +43,4 @@
 </table>
 
 <p><%= paginate @articles %></p>
+<i class="fa fa-qq"></i><i class="fa fa-weixin"></i>
