--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -29,17 +29,22 @@
     <th>回覆內容</th>
     <th>回覆者</th>
     <th>時間</th>
+    
     <th>操作</th>
+    
   </tr>
   <% @comments.each do |cm| %>
   <tr>
     <td><%= simple_format(cm.reply) %></td>
     <td><%= cm.user.display_name %></td>
     <td><%= cm.updated_at.to_s(:short) %></td>
+    
+    <% if current_user && cm.user == current_user %>
     <td>
       <%= link_to "Edit", article_path(@article, :comment_id => cm), :class => "btn btn-info" %>
       <%= link_to "delete", article_comment_path(@article, cm), :method => :delete, :class => "btn btn-danger" %>
     </td>
+    <% end %>
   </tr>
   <% end %>
 </table>
