--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,17 +1,20 @@
 <h1>Hi <%= current_user.display_name %></h1>
 
-
 <%= form_for @profile, :url => profile_path(@user) do |f| %>
-
-
-<div class="form_group">
-  <%= f.label :first_name, "名" %>
-  <%= f.text_field :first_name, :class => "form-control" %>
-</div>
 
 <div class="form_group">
   <%= f.label :last_name, "姓" %>
-  <%= f.text_area :last_name, :class => "form-control" %>
+  <%= f.text_field :last_name, :required => true, :class => "form-control" %>
+</div>
+
+<div class="form_group">
+  <%= f.label :first_name, "名" %>
+  <%= f.text_field :first_name, :required => true, :class => "form-control" %>
+</div>
+
+<div class="form_group">
+  <%= f.label :phone, "Phone Number" %>
+  <%= f.text_field :phone, :class => "form-control" %>
 </div>
 
 <div class="form_group">
@@ -19,10 +22,5 @@
   <%= f.text_area :description, :class => "form-control" %>
 </div>
 
-<div class="form_group">
-  <%= f.label :phone, "Phone Number" %>
-  <%= f.text_area :phone, :class => "form-control" %>
-</div>
-
-
+<%= f.submit "Send" %>
 <% end %>
