--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,11 +37,11 @@
     <% end %>
         <% if current_user %>
         <li><%= link_to "Hi! #{current_user.display_name}" %></li>
-        <li><%= link_to "Profile", edit_profile_path( current_user ) %></li>
+        <li><%= link_to "Profile", profile_path( current_user ) %></li>
         <% end %>
     </ul>
     <%= yield %>
-      <% if current_user.present? && current_user.role == "admin" %>
+      <% if current_user && current_user.role == "admin" %>
         <%= link_to "你是管理者，快來快來管一下", admin_articles_path %>
       <% end %>
       </div>
